[package]
name = "hierarchy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
chrono = { version = "0.4.24", features = ["serde"] }
serde = { version = "1.0.155", features = ["derive"] }
serde_json = "1.0.94"
statrs = "0.16.0"

[[bin]]
name = "create"
path = "src/bin/create_hierarchy.rs"

[[bin]]
name = "load"
path = "src/bin/load.rs"
